[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.2.0",
  "wheel >= 0.37.0",
]

[project]
name = "pyhc_core"
description = "Python package for plasma science"
readme = "README.md"
keywords = [
  "astrophysics",
  "heliophysics",
  "magnetospheric physics",
  "solar physics",
  "space physics",
]
license = {file = "LICENSE.md"}
# NumPy Enhancement Proposal 29 recommends that packages support minor
# releases of Python for 42 months after the initial release (see
# https://numpy.org/neps/nep-0029-deprecation_policy.html#support-table).
requires-python = ">=3.9"
version = "0.1.0"

dependencies = [
  "hapiclient",
  "numpy",
  "plasmapy; python_version <= '3.13'",  # because of Numba dependency
  "pysat",
  "pyspedas",
  "spacepy",
  "sunpy",
]

[project.optional-dependencies]
optional = [
  "aiapy",
  "aidapy",
  "ccsdspy",
  "cdflib",
  "dbprocessing",
  "enlilviz",
  "fiasco",
  "fisspy",
  "geodata",
  "geopack",
  "geospacelab",
  "hissw",
  "irispy-lmsal",
  "mcalf",
  "ndcube",
  "ocbpy",
  "ommbv; python_version < '3.12'",  # requires numpy.distutils
  "pycdfpp",
  "pydarn",
  "pyglow",
  "pyrfu",
  "pysatCDAAC",
  "pysatCDF; python_version < '3.12'",
  "pysatMadrigal",
  "pysatMissions",
  "pysatNASA",
  "pysatSeasons",
  "pysatSpaceWeather",
  "pytplot",
  "regularizepsf",
  "savic",
  "sciqlop",
  "skywinder",
  "solo-epd-loader",
  "speasy",
  "spiceypy",
  "sunkit-image",
  "sunkit-instruments",
  "sunraster",
  "viresclient",
]
tests = [
  "nox",
  "uv",
]